tests/NormalTests/paczka2/big_fuzzy/44630210.err
Error in line 3: GQ439Fmi S109 94,4
Error in line 10: Tl9P7 A460 24,9
Error in line 19: Kbkzl A460 31,59
Error in line 9: K7KCvkUNxz A838 54,4
Error in line 23: Tl9P7 A460 28,7
Error in line 31: Kbkzl A460 110,4
Error in line 39: S109 S109 423,0
Error in line 36: Tl9P7 S509 81,1
Error in line 40: Kbkzl S109 41,5
Error in line 32: K7KCvkUNxz S109 95,9
Error in line 42: iZ5O S109 92,3
Error in line 54: GQ439Fmi A460 88,63
Error in line 56: nf1m1Vdj A46| 55,8
Error in line 49: S109 A838 59,5
Error in line 47: iZ5O A460 47,8
Error in line 79: Kbkzl S109 68,2
Error in line 81: Kbkzl S509 73,9
Error in line 72: nf1m1Vdj S109 14,2
Error in line 57: GQ439Fmi A460 339,1
Error in line 89: nf1m1Vdj A838 73,9
Error in line 90: GQ439Fmi S509 32,0
Error in line 94: GQ439Fmi A460 94,8
Error in line 96: GQ439Fmi S509 10,3
Error in line 98: Tl9P7 S509 174,8
Error in line 109: Tl9P7 S109 11,4
Error in line 115: nf1m1Vdj A460 58,5
Error in line 105: Kbkzl S509 49,0
Error in line 122: Tl9P7 A838 349,2
Error in line 123: iZ5O A838 66,5
Error in line 130: nf1m1Vdj A460 63,7
Error in line 138: Kbkzl A838 93,2
Error in line 146: K7KCvkUNxz S109 9,4
Error in line 172: iZ5O S509 15,89
Error in line 173: S109 A460 179,84
Error in line 178: GQ439Fmi S109 82,1
Error in line 171: K7KCvkUNxz S109 13,1
Error in line 189: iZ5O S509 21,2
Error in line 179: S109 A460 2,0
Error in line 186: Kbkzl S109 80,0
Error in line 196: Tl9P7 S509 11,7
Error in line 197: Tl9P7 S109 21,9
Error in line 185: nf1m1Vdj S109 380,6
Error in line 234: S109 S109 83,2
Error in line 236: K7KCvkUNxz A460 448,4
Error in line 235: iZ5O S509 34,7
Error in line 237: S109 S509 80,4
